--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/garlic-chicken.html">Garlic Chicken</a></li>
+        <li><a href="recipes/pizza.html">Pizza</a></li>
     </ul>
 </body>
 </html>
