Add CSS to all pages
Add CSS basics from lessons, including text color, background color,
alignment, fonts. Also using two separate CSS files, style-main for
the homepage, and style-recipe for the subpages.

--- a/recipes/garlic-chicken.html
+++ b/recipes/garlic-chicken.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garlic Chicken Recipe</title>
+    <link rel="stylesheet" href="../style-recipe.css">
 </head>
 <body>
-    <h1>Garlic Chicken</h1>
+    <h1 class="title">Garlic Chicken</h1>
     <img src="../images/garlic-chicken.jpg" alt="An image of savory garlic chicken" width="320" height="320">
     <h2>Garlic Chicken that will make you do a little jig!</h2>
     <p>Garlic and chicken have always been two extremely important ingredients in my life.
