--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna Recipe</title>
+    <link rel="stylesheet" href="../style-recipe.css">
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1 class="title">Lasagna</h1>
     <img src="../images/lasagna.jpg" alt="An image of homemade lasagna" width="320" height="320">
     <h2>This mouthwatering lasagna will leave your friends and family envious of your cooking skills!</h2>
     <p>Lasagnas are really delicious. They are made of meat, cheese and noodles. 
