--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza Recipe</title>
+    <link rel="stylesheet" href="../style-recipe.css">
 </head>
 <body>
-    <h1>Pizza</h1>
+    <h1 class="title">Pizza</h1>
     <img src="../images/pizza.jpg" alt="An image of homemade pizza" width="320" height="320">
     <h2>The best pizza I have ever eaten!</h2>
     <p>Pizza. Everyone knows about it. But what about how to cook it?</p>
